crates/aven-check/tests/fixtures/check/invalid/call-arg-record.av
f : (Text) -> Int
f = (x) => { text: x, value: 1 }.value
result : { a: Int } = { a: f(42) }
